<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:scrollbars="none"
        android:layout_weight="1">

        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:scrollbars="horizontal"
            android:gravity="center|right"
            android:ellipsize="start"
            android:layout_gravity="center|right"
            android:paddingEnd="10sp"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/_0"
            android:textSize="40sp" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/numPad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/tvAC"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/action_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvDel"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:background="@drawable/action_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv7"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiv"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMul"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSub"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv0"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDot"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/numeric_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAns"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/action_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="0dp"
                android:layout_height="80sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/operator_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>